# Any2MD

./: .gitignore  ANY2MD_WHEELS_USAGE.md  Any2MD_Architechture.md  CHANGELOG.md  CONTRIBUTING.md  DEBUG_BAT.md  README.md  __init__.py  check_env.py  cli.py  config.yaml  pipeline.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.sisyphus/: boulder.json
.sisyphus/evidence/final-wave/: task-f3-file-not-found.txt  task-f3-md-passthrough.txt  task-f3-txt-passthrough.txt  task-f3-unsupported-format.txt
.sisyphus/evidence/integration/: task-8-file-not-found.txt  task-8-help.txt  task-8-md-passthrough.txt  task-8-naming-conflict.txt  task-8-txt-passthrough.txt
.sisyphus/evidence/phase2/: task-1-import-test.txt  task-1-verification.txt  task-2-implementation.txt  task-2-verification.txt  task-3-verification.txt  task-4-dispatcher-mode-aware.txt  task-5-evidence.txt  (+1 more)
.sisyphus/plans/: any2md-mvp-phase1.md  any2md-mvp-phase2.md  pdf-heavy-channel.md  phase4-async-robustness.md  phase5-ux-distribution.md
any2md/: __init__.py
bat/: run.bat
bat/test_batch_edge_cases/: TEST_PLAN.md
tests/: __init__.py  conftest.py  test_api.py  test_config.py  test_dispatcher.py  test_exceptions.py  test_integration.py
tests/sample_files/: sample.html  sample.json  sample.md  sample.txt
wheels/: __init__.py  api.py  cleaner.py  config.py  dispatcher.py  exceptions.py  fast_lane.py  logger.py
wheels/converters/: __init__.py  base_converter.py  converter_html.py  converter_markitdown.py  converter_pandoc.py  converter_passthrough.py  converter_pdf.py
(+13 files in other folders)
