[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Any2MD-1StepMore"
version = "0.3.0"
description = "Universal document to Markdown converter with quality/fast dual-mode pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Any2MD Contributors"}
]
keywords = ["markdown", "document-converter", "docx", "pdf", "html"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "filetype>=1.2.0",
    "pypandoc-binary>=1.13.0",
    "mammoth>=1.6.0",
    "markdownify>=0.14.0",
    "markitdown>=0.0.1",
    "docling-slim>=2.0.0",
    "tenacity>=8.2.0",
    "typer>=0.12.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
any2md = "cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.setuptools]
packages = ["any2md", "wheels", "wheels.converters"]
py-modules = ["pipeline", "cli"]

[tool.setuptools.package-data]
wheels = ["*.yaml"]
